[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pnfl-pdbtoexcel"
version = "1.0.2"
description = "Exports the contents of a WinLogStats database (.pdb) into an Excel worksheet (.xlsm)"
authors = [{ name = "Brian J" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["xlsxwriter", "fbpro98-gameplan", "pnfl-playpool"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.entry-points."pnfl.commands"]
convert-pdb = "pnfl_pdbtoexcel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pnfl_pdbtoexcel = ["resources/*.bin"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 160

[tool.ruff.format]
quote-style = "double"
