[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pnfl-pdbtoexcel"
version = "1.0.2"
description = "Exports the contents of a WinLogStats database (.pdb) into an Excel worksheet (.xlsm)"
authors = [{ name = "Brian J" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["xlsxwriter", "fbpro98-gameplan", "pnfl-playpool"]

[project.optional-dependencies]
dev = ["pytest", "pyright==1.1.409", "ruff", "ipython"]

[project.entry-points."pnfl.commands"]
convert-pdb = "pnfl_pdbtoexcel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pnfl_pdbtoexcel = ["resources/*.bin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports/vars, undefined names)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade (modernize syntax)
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "E501",   # long assertion messages are common in tests
    "B905",   # zip(x, x[1:]) without strict= is idiomatic for adjacent-pair iteration in tests
    "RUF007", # same idiom — itertools.pairwise rewrite is unnecessary churn in tests
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = [
    "**/*.egg-info",
    "**/.*",
    "**/.venv",
    "**/__pycache__",
    "**/build",
    "**/dist",
    "**/node_modules",
    "**/output",
    "**/venv",
]
extraPaths = ["src"]
typeCheckingMode = "standard"
reportUnusedImport = "warning"
pythonVersion = "3.10"
venvPath = ".."
venv = ".venv"
